Fix prettier issue, Remove dependency from package.json
Remove babel-plugin-transform-react-remove-prop-types

--- a/spec/dummy/bsconfig.json
+++ b/spec/dummy/bsconfig.json
@@ -16,7 +16,5 @@
       "in-source": true
     }
   ],
-  "bs-dependencies": [
-    "@rescript/react"
-  ]
+  "bs-dependencies": ["@rescript/react"]
 }
