Fix new line at the end of file, Fix dummy package.json scripts

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -53,8 +53,8 @@
     "lint": "cd ../.. && yarn run lint",
     "format": "cd ../.. && yarn start format",
     "test": "yarn run build:test && yarn run lint && rspec",
-    "build:test": "rm -rf public/webpack/test && yarn build:rescript && RAILS_ENV=test && NODE_ENV=test bin/webpack",
-    "build:dev": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development && NODE_ENV=development bin/webpack --watch",
+    "build:test": "rm -rf public/webpack/test && yarn build:rescript && RAILS_ENV=test NODE_ENV=test bin/webpack",
+    "build:dev": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:dev:server": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:dev:watch": "rescript build -w && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:clean": "yarn build:rescript && rm -rf public/webpack || true",
