Run webpacker:install to update executables on bin/

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.10.4",
-    "@rails/webpacker": "6.0.0-rc.6",
+    "@rails/webpacker": "^6.0.0-rc.6",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "core-js": "3",
@@ -44,11 +44,14 @@
     "sass-resources-loader": "^2.1.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.0.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.1.4"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@webpack-cli/serve": "^1.6.0",
     "react-refresh": "^0.8.1"
   },
   "browser": {
