--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -46,8 +46,8 @@
     "url-loader": "^4.0.0"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "react-refresh": "^0.8.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "react-refresh": "^0.9.0",
     "webpack-dev-server": "^4.5.0"
   },
   "browser": {
