--- a/react_on_rails_pro/.circleci/config.yml
+++ b/react_on_rails_pro/.circleci/config.yml
@@ -44,7 +44,7 @@ aliases:
       echo "Bundler version: "; bundle --version
       bundle config set --local path 'vendor/bundle'
       bundle config set --local disable_checksum_validation true
-      cd spec/dummy && bundle _2.2.28_ check || bundle _2.2.28_ install --jobs=4 --retry=3
+      cd spec/dummy && bundle lock --add-platform 'x86_64-linux' && bundle _2.2.28_ check || bundle _2.2.28_ install --jobs=4 --retry=3
 
   # Install ruby gems unless existing set of gems is satisfying bundler.
   - &install-package-ruby-gems
@@ -72,13 +72,13 @@ aliases:
   - &restore-dummy-app-gem-cache
     name: Restore cached Ruby Gems for dummy app
     keys:
-      - v4-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
+      - v5-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
 
   # Restore vendor/bundle dir from cache using react_on_rails_pro.gemspec checksum as a key.
   - &restore-package-gem-cache
     name: Restore cached Ruby Gems for package
     keys:
-      - v4-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
+      - v5-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
 
     # NOTE: Sometimes CI generated docker images are not updated in time to keep up with the minimum required
     # by chromedriver versions of Chrome. Just bump here Chrome version if chromedriver raises errors
@@ -100,7 +100,7 @@ jobs:
   # Lint all
   lint-js-and-ruby:
     docker:
-      - image: &docker_image circleci/ruby:2.6-node-browsers
+      - image: &docker_image circleci/ruby:2.7-node-browsers
     steps:
       - checkout
       - run: *print-system-info
