Update webpacker on spec/dummy project (#232)
* Install webpacker v6
* Add Webpack configuration and Install dependencies
* Update view API usage
* Fix alias usage on scss, Update division operator to sass:math
* Bump HMR dependencies to solve  react-refresh-webpack-plugin issue
* bump ruby version & gem caches, lock CI bundler to linux platform
* Run prettier, Remove unused config
* Fix HMR config
* remove redundant HMR configuration
* Fix Webpack configuration object not matchin API, remove jQuery

Co-authored-by: Judah Meek <judah.meek@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 /doc/
 /pkg/
 /spec/reports/
-/tmp/
 *.gem
 /vendor/
+tmp
 
-/spec/examples.txt
+**/spec/examples.txt
 /spec/dummy/client/node_modules
 /spec/dummy/app/assets/webpack/
 /spec/dummy/coverage/
@@ -40,3 +40,8 @@ spec/dummy/client/npm-debug.log*
 
 .yalc
 yalc.lock
+
+**/.node-renderer-bundles/**
+**/db/*.sqlite3
+**/log/*.log
+**/public/webpack/**
