--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -9,22 +9,25 @@
     "@loadable/component": "^5.14.1",
     "@loadable/server": "^5.14.0",
     "@loadable/webpack-plugin": "^5.14.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "6.0.0-rc.6",
     "@sentry/node": "^6.2.3",
     "@sentry/tracing": "^6.2.3",
     "@shakacode-tools/react-on-rails-pro-node-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-node-renderer",
+    "@webpack-cli/serve": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "core-js": "3",
     "create-react-class": "^15.6.3",
     "cross-fetch": "^3.1.4",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.4",
     "es5-shim": "^4.5.9",
     "expose-loader": "1.0.3",
+    "file-loader": "^6.2.0",
     "history": "^4.6.3",
     "honeybadger": "^1.4.0",
     "imports-loader": "^1.2.0",
-    "jquery": "^3.5.1",
-    "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
+    "mini-css-extract-plugin": "^2.4.5",
     "node-libs-browser": "^2.2.1",
     "nps": "^5.9.3",
     "prop-types": "^15.7.2",
@@ -34,24 +37,27 @@
     "react-on-rails": "12.4.0-rc.0",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
-    "react-refresh": "^0.8.1",
+    "react-refresh": "^0.11.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^2.0.0-beta.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^3.1.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "sass-resources-loader": "^2.0.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^5.1.4"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "body-parser": "^1.19.0",
     "jsdom": "^16.4.0",
     "preload-webpack-plugin": "^3.0.0-alpha.1",
     "tape": "^4.7.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^4.5.0"
   },
   "browser": {
     "fs": false
