--- a/spec/loadable/.gitignore
+++ b/spec/loadable/.gitignore
@@ -28,3 +28,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+**/.node-renderer-bundles/**
+/webpack
