Update webpacker on spec/loadable project (#233)
* Install webpacker v6, Update package-scripts
* Update API usage of the view helpers, source_entry_path and babel
* Update webpack config files
* Update package-scripts, Update HMR dependencies

--- a/react_on_rails_pro/spec/loadable/.gitignore
+++ b/react_on_rails_pro/spec/loadable/.gitignore
@@ -28,3 +28,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+**/.node-renderer-bundles/**
+/webpack
