--- a/react_on_rails_pro/spec/loadable/package-scripts.yml
+++ b/react_on_rails_pro/spec/loadable/package-scripts.yml
@@ -2,7 +2,7 @@ scripts:
   webpack-dev-server:
     default:
       description: Run the webpack dev server.
-      script: NODE_OPTIONS="--max-old-space-size=4096" NODE_ENV=development RAILS_ENV=development webpack-dev-server --env=devServer --config webpack.config.babel.js
+      script: NODE_OPTIONS="--max-old-space-size=4096" NODE_ENV=development RAILS_ENV=development bin/webpack-dev-server
     debug:
       description: Run the webpack dev server using the debugger.
       script: NODE_OPTIONS="--max-old-space-size=4096" NODE_ENV=development node --inspect-brk node_modules/.bin/webpack-dev-server --env=devServer --config webpack.config.babel.js
@@ -23,21 +23,18 @@ scripts:
     dev:
       default:
         description: Build client and server bundles for dev env.
-        script: concurrently --prefix "[{name}]" --names "CLIENT_BUNDLES,SERVER_BUNDLE" "nps build.dev.client" "nps build.dev.server"
+        script: concurrently --prefix "[{name}]" --names "CLIENT_BUNDLES,SERVER_BUNDLE" "nps build.dev.client"
       watch:
         description: Build client and server bundles for dev env (watch mode enabled).
-        script: nps clear.dev && concurrently --kill-others -c "bgBlue.bold,bgMagenta.bold,bgGreen.bold" --prefix "[{name}]" --names "CLIENT_BUNDLES,SERVER_BUNDLE" "nps build.dev.client.watch" "nps build.dev.server.watch"
+        script: nps clear.dev && concurrently --kill-others -c "bgBlue.bold,bgMagenta.bold,bgGreen.bold" --prefix "[{name}]" --names "CLIENT_BUNDLES,SERVER_BUNDLE" "nps build.dev.client"
       client:
         default:
           description: Build client bundles for dev env.
-          script: NODE_OPTIONS="--max-old-space-size=4096" NODE_ENV=development RAILS_ENV=development webpack --env=dev --config webpack.config.babel.js
-        watch:
-          description: Build client bundles for dev env (watch mode enabled).
-          script: nps "build.dev.client --watch"
+          script: NODE_OPTIONS="--max-old-space-size=4096" NODE_ENV=development RAILS_ENV=development bin/webpack --watch
       server:
         default:
           description: Build server bundle for dev env.
-          script: NODE_ENV=development RAILS_ENV=development webpack --env=serverBundleDev --config webpack.config.babel.js
+          script: NODE_ENV=development RAILS_ENV=development SERVER_BUNDLE_ONLY=yes bin/webpack
         watch:
           description: Build server bundle for dev env (watch mode enabled).
           script: nps "build.dev.server --watch"
