--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -4,17 +4,22 @@
   "description": "example of server rendering",
   "main": "server.js",
   "dependencies": {
+    "@babel/core": "7",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
     "@babel/preset-react": "^7.10.1",
+    "@babel/runtime": "7",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/component": "^5.14.1",
     "@loadable/server": "^5.14.0",
     "@loadable/webpack-plugin": "^5.14.0",
-    "@rails/webpacker": "6.0.0-rc.6",
     "@sentry/node": "^6.2.3",
     "@sentry/tracing": "^6.2.3",
     "@shakacode-tools/react-on-rails-pro-node-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-node-renderer",
     "@webpack-cli/serve": "^1.6.0",
+    "babel-loader": "8",
     "babel-plugin-module-resolver": "^4.0.0",
+    "compression-webpack-plugin": "9",
     "core-js": "3",
     "create-react-class": "^15.6.3",
     "cross-fetch": "^3.1.4",
@@ -47,10 +52,15 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "sass-resources-loader": "^2.0.0",
+    "shakapacker": "6.0.1",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "5",
     "url-loader": "^4.1.1",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^5.1.4"
+    "webpack-merge": "5"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
@@ -58,7 +68,7 @@
     "jsdom": "^16.4.0",
     "preload-webpack-plugin": "^3.0.0-alpha.1",
     "tape": "^4.7.0",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.7.3"
   },
   "browser": {
     "fs": false
@@ -68,10 +78,10 @@
     "lint": "cd ../.. && nps lint",
     "preinstall": "yarn run link-source && yalc add --link @shakacode-tools/react-on-rails-pro-node-renderer",
     "link-source": "cd ../.. && yalc publish",
-    "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpack",
-    "build:dev": "rm -rf public/webpack/development && RAILS_ENV=development NODE_ENV=development bin/webpack",
-    "build:dev:watch": "RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
-    "build:production": "RAILS_ENV=production NODE_ENV=production bin/webpack -p",
+    "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpacker",
+    "build:dev": "rm -rf public/webpack/development && RAILS_ENV=development NODE_ENV=development bin/webpacker",
+    "build:dev:watch": "RAILS_ENV=development NODE_ENV=development bin/webpacker --watch",
+    "build:production": "RAILS_ENV=production NODE_ENV=production bin/webpacker -p",
     "build:clean": "rm -rf public/webpack || true",
     "node-renderer-debug": "RENDERER_PORT=3800 ndb client/node-renderer.js",
     "node-renderer": "RENDERER_PORT=3800 node client/node-renderer.js"
