--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.10.4",
-    "@rails/webpacker": "^6.0.0-rc.6",
+    "shakapacker ": "^6.1.1",
     "@rescript/react": "^0.10.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -61,9 +61,9 @@
     "format": "cd ../.. && yarn start format",
     "test": "yarn run build:test && yarn run lint && rspec",
     "build:test": "rm -rf public/webpack/test && yarn build:rescript && RAILS_ENV=test NODE_ENV=test bin/webpack",
-    "build:dev": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
-    "build:dev:server": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
-    "build:dev:watch": "rescript build -w && RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
+    "build:dev": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpacker --watch",
+    "build:dev:server": "rm -rf public/webpack/development && yarn build:rescript && RAILS_ENV=development NODE_ENV=development bin/webpacker --watch",
+    "build:dev:watch": "rescript build -w && RAILS_ENV=development NODE_ENV=development bin/webpacker --watch",
     "build:clean": "yarn build:rescript && rm -rf public/webpack || true",
     "build:rescript": "rescript clean && rescript build -with-deps",
     "build:rescript:dev": "rescript build -w"
